# QDamakuEngine

./: .gitignore  QDamakuEngine.sln  README.md  pyproject.toml
.github/workflows/: build-and-test.yaml
QDamakuEngine/: QDamakuEngine.py  QDamakuEngine.pyproj  README.md  config.json  requirements.txt
QDamakuEngine/cert/: cert.pem  key.pem
QDamakuEngine/lang/zh_CN/: zh_CN.json
qdamakuengine/: __init__.py  __main__.py  app.py  config.py  damaku.py  log.py  storage.py
tests/: test_app.py  test_config.py  test_damaku.py  test_log.py  test_storage.py
