[tool.poetry]
name = "qdamakuengine"
version = "0.1.0"
description = "Sending text and getting damaku on screen"
authors = ["Zhang Hua <zhanghua.00@qq.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.scripts]
qdamakuengine = "qdamakuengine.__main__:start"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.1"
python-magic = {version = "^0.4.27", markers = "sys_platform != 'win32'"}
python-magic-bin = {version = "^0.4.14", markers = "sys_platform == 'win32'"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
tomli-w = "^1.0.0"
pytest-qt = "^4.4.0"
pytest-xvfb = "^3.0.0"

[tool.poetry.group.dev]
optional=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
